--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,23 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
-@import './base.css';
-@import './color.css';
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import "./color.css";
 
 #app {
-  
 }
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
 a {
   text-decoration: none;
   color: inherit;
 }
-
 
 body {
   background-color: var(--background-color);
